Add module for HapLink haplotypes
Signed-off-by: Thomas A. Christensen II <25492070+MillironX@users.noreply.github.com>

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -55,4 +55,15 @@ process {
             --depth ${params.variant_depth} \\
             """
     }
+    withName: 'HAPLINK_HAPLOTYPES' {
+        ext.args = """\
+            --significance ${params.haplotype_significance} \\
+            --depth ${params.haplotype_depth} \\
+            --method ${params.haplotype_method} \\
+            --overlap-min ${params.haplotype_overlap_min} \\
+            --overlap-max ${params.haplotype_overlap_max} \\
+            --iterations ${params.haplotype_iterations} \\
+            --seed ${params.seed} \\
+        """
+    }
 }
