Add module for MAFFT
Signed-off-by: Thomas A. Christensen II <25492070+MillironX@users.noreply.github.com>

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -66,4 +66,7 @@ process {
             --seed ${params.seed} \\
         """
     }
+    withName: 'MAFFT' {
+        ext.args = '--auto'
+    }
 }
