Add module for RAxML-NG parse
Signed-off-by: Thomas A. Christensen II <25492070+MillironX@users.noreply.github.com>

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -69,4 +69,7 @@ process {
     withName: 'MAFFT' {
         ext.args = '--auto'
     }
+    withName: 'RAXMLNG_PARSE' {
+        ext.args = "--model ${params.phylogenetic_model}"
+    }
 }
