Add module for RAxML-NG search
Signed-off-by: Thomas A. Christensen II <25492070+MillironX@users.noreply.github.com>

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -72,4 +72,7 @@ process {
     withName: 'RAXMLNG_PARSE' {
         ext.args = "--model ${params.phylogenetic_model}"
     }
+    withName: 'RAXMLNG_SEARCH' {
+        ext.args = "--seed ${params.seed} --outgroup ROOT"
+    }
 }
