Add module for RAxML-NG bootstrap
Signed-off-by: Thomas A. Christensen II <25492070+MillironX@users.noreply.github.com>

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -75,4 +75,7 @@ process {
     withName: 'RAXMLNG_SEARCH' {
         ext.args = "--seed ${params.seed} --outgroup ROOT"
     }
+    withName: 'RAXMLNG_BOOTSTRAP' {
+        ext.args = "--bs-trees ${params.phylogenetic_bootstraps} --bs-cutoff ${params.phylogenetic_bootstrap_cutoff} --seed ${params.seed}"
+    }
 }
