Add module for RAxML-NG support
Signed-off-by: Thomas A. Christensen II <25492070+MillironX@users.noreply.github.com>

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -78,4 +78,7 @@ process {
     withName: 'RAXMLNG_BOOTSTRAP' {
         ext.args = "--bs-trees ${params.phylogenetic_bootstraps} --bs-cutoff ${params.phylogenetic_bootstrap_cutoff} --seed ${params.seed}"
     }
+    withName: 'RAXMLNG_SUPPORT' {
+        ext.args = "--outgroup ROOT"
+    }
 }
