--- a/conf/parameters.config
+++ b/conf/parameters.config
@@ -87,4 +87,5 @@ params {
     skip_filtering    = false
     skip_assembly     = false
     skip_haplotype    = false
+    skip_phylogenetics = false
 }
