Add parameter to choose RAxML model
Signed-off-by: Thomas A. Christensen II <25492070+MillironX@users.noreply.github.com>

--- a/conf/parameters.config
+++ b/conf/parameters.config
@@ -68,6 +68,7 @@ params {
     // Phylogenetics options
     phylogenetic_bootstraps       = 1000
     phylogenetic_bootstrap_cutoff = 0.03
+    phylogenetic_model            = 'GTR+G'
 
     // Boilerplate options
     outdir           = './results'
