--- a/conf/modules.config
+++ b/conf/modules.config
@@ -40,6 +40,9 @@ process {
         ext.args  = "-q ${params.variant_quality} -t ${params.variant_frequency} -m ${params.variant_depth}"
         ext.args2 = "-aa -A -d 0 -Q 0"
     }
+    withName: 'BLAST_MAKEBLASTDB' {
+        ext.args = '-dbtype nucl'
+    }
     withName: 'BLAST_BLASTN' {
         ext.args = '-num_alignments 1 -outfmt "6 saccver"'
     }
