Update phylogenetics subworkflow to use ksumngs modules
Signed-off-by: Thomas A. Christensen II <25492070+MillironX@users.noreply.github.com>

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -82,6 +82,6 @@ process {
         ext.args = "--bs-trees ${params.phylogenetic_bootstraps} --bs-cutoff ${params.phylogenetic_bootstrap_cutoff} --seed ${params.seed}"
     }
     withName: 'RAXMLNG_SUPPORT' {
-        ext.args = "--outgroup ROOT"
+        ext.args = "--outgroup ROOT --prefix yavsap"
     }
 }
