Add output directives to modules.config
Signed-off-by: Thomas A. Christensen II <25492070+MillironX@users.noreply.github.com>

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -1,9 +1,26 @@
 def platform = params.platform
 
 process {
+    // Deinterleaving parameter: take every other read
     withName: 'SEQKIT_SPLIT2' {
         ext.args = '-p2'
     }
+
+    // Reference genome download output
+    withName: 'GENOME_DOWNLOAD:EDIRECT_EFETCH' {
+        publishDir = [
+            path: { "${params.outdir}/reference" },
+            mode: params.publish_dir_mode
+        ]
+    }
+    withName: 'GENOME_DOWNLOAD:SAMTOOLS_FAIDX' {
+        publishDir = [
+            path: { "${params.outdir}/reference" },
+            mode: params.publish_dir_mode
+        ]
+    }
+
+    // Trimming: argument propogation
     withName: 'TRIMMOMATIC' {
         ext.clipFlag   = (params.trim_adapters && params.trim_mismatches && params.trim_pclip && params.trim_clip) ? "ILLUMINACLIP:/usr/local/share/trimmomatic-0.39-2/adapters/${params.trim_adapters}:${params.trim_mismatches}:${params.trim_pclip}:${params.trim_clip}" : ''
         ext.winFlag    = (params.trim_winsize && params.trim_winqual) ? "SLIDINGWINDOW:${params.trim_winsize}:${params.trim_winqual}" : ''
@@ -24,9 +41,21 @@ process {
         ext.tailflag   = ( params.trim_tailcrop > 0 ) ? "--tailcrop ${params.trim_tailcrop}" : ''
         ext.args = [ext.minlenflag, ext.maxlenflag, ext.qualflag, ext.mingcflag, ext.maxgcflag, ext.headflag, ext.tailflag].join(' ')
     }
+
+    // Kraken reports output
+    withName: 'KRAKEN2' {
+        publishDir = [
+            path: { "${params.outdir}/classification" },
+            mode: params.publish_dir_mode
+        ]
+    }
+
+    // Kraken filtering
     withName: 'KRAKENTOOLS_EXTRACT' {
         ext.args = '--include-children'
     }
+
+    // General alignment settings: match sequencing platform, and output SAM format
     withName: 'MINIMAP2_ALIGN' {
         ext.args =
             """\
@@ -36,19 +65,81 @@ process {
             --eqx \
             """
     }
+
+    // First alignment output
+    withName: 'ALIGNMENT:SAMTOOLS_SORT' {
+        publishDir = [
+            path: { "${params.outdir}/alignment" },
+            mode: params.publish_dir_mode
+        ]
+    }
+    withName: 'ALIGNMENT:SAMTOOLS_INDEX' {
+        publishDir = [
+            path: { "${params.outdir}/alignment" },
+            mode: params.publish_dir_mode
+        ]
+    }
+
+    // Realignment output
+    withName: 'CLOSEST_REFERENCE:CUSTOM_ALIGNMENT:SAMTOOLS_SORT' {
+        publishDir = [
+            path: { "${params.outdir}/realignment" },
+            mode: params.publish_dir_mode
+        ]
+    }
+    withName: 'CLOSEST_REFERENCE:CUSTOM_ALIGNMENT:SAMTOOLS_INDEX' {
+        publishDir = [
+            path: { "${params.outdir}/realignment" },
+            mode: params.publish_dir_mode
+        ]
+    }
+
+    // Consensus sequences: match variant calling params and output
     withName: 'IVAR_CONSENSUS' {
         ext.args  = "-q ${params.variant_quality} -t ${params.variant_frequency} -m ${params.variant_depth}"
         ext.args2 = "-aa -A -d 0 -Q 0"
+        publishDir = [
+            path: { "${params.outdir}/consensus" },
+            mode: params.publish_dir_mode
+        ]
     }
+
+    // BLAST settings
     withName: 'BLAST_MAKEBLASTDB' {
         ext.args = '-dbtype nucl'
     }
     withName: 'BLAST_BLASTN' {
         ext.args = '-num_alignments 1 -outfmt "6 saccver"'
     }
+
+    // CliqueSNV parameter propogation
     withName: 'CLIQUESNV_.*' {
         ext.args = "-t ${params.haplotype_depth} -tf ${params.haplotype_frequency} -log -fdf extended"
     }
+
+    // CliqueSNV variant output
+    withName: 'CLIQUESNV_ILLUMINAVC' {
+        publishDir = [
+                path: { "${params.outdir}/variants" },
+                mode: params.publish_dir_mode
+            ]
+    }
+
+    // CliqueSNV haplotype output
+    withName: 'CLIQUESNV_ILLUMINA' {
+        publishDir = [
+                path: { "${params.outdir}/haplotypes" },
+                mode: params.publish_dir_mode
+            ]
+    }
+    withName: 'HAPLOTYPING:JSON2YAML' {
+        publishDir = [
+                path: { "${params.outdir}/haplotypes" },
+                mode: params.publish_dir_mode
+            ]
+    }
+
+    // HapLink.jl variant parameter propgation and output
     withName: 'HAPLINK_VARIANTS' {
         ext.args = """\
             --quality ${params.variant_quality} \\
@@ -57,7 +148,13 @@ process {
             --significance ${params.variant_significance} \\
             --depth ${params.variant_depth} \\
             """
+        publishDir = [
+                path: { "${params.outdir}/variants" },
+                mode: params.publish_dir_mode
+            ]
     }
+
+    // HapLink.jl haplotype parameter propogation and output
     withName: 'HAPLINK_HAPLOTYPES' {
         ext.args = """\
             --significance ${params.haplotype_significance} \\
@@ -68,10 +165,30 @@ process {
             --iterations ${params.haplotype_iterations} \\
             --seed ${params.seed} \\
         """
+        publishDir = [
+                path: { "${params.outdir}/haplotypes" },
+                mode: params.publish_dir_mode
+            ]
     }
+
+    // HapLink.jl haplotype sequence output
+    withName: 'HAPLINK_SEQUENCES' {
+        publishDir = [
+                path: { "${params.outdir}/haplotypes" },
+                mode: params.publish_dir_mode
+            ]
+    }
+
+    // MAFFT required parameter and output
     withName: 'MAFFT' {
         ext.args = '--auto'
+        publishDir = [
+                path: { "${params.outdir}/multi_alignment" },
+                mode: params.publish_dir_mode
+            ]
     }
+
+    // RAxML-NG parameter propgation and output
     withName: 'RAXMLNG_PARSE' {
         ext.args = "--model ${params.phylogenetic_model}"
     }
@@ -83,5 +200,17 @@ process {
     }
     withName: 'RAXMLNG_SUPPORT' {
         ext.args = "--outgroup ROOT --prefix yavsap"
+        publishDir = [
+                path: { "${params.outdir}/phylogenetics" },
+                mode: params.publish_dir_mode
+            ]
+    }
+
+    // MultiQC output
+    withName: 'MULTIQC' {
+        publishDir = [
+            path: { "${params.outdir}" },
+            mode: params.publish_dir_mode
+        ]
     }
 }
