Bring up-to-date with nf-core standards
Signed-off-by: Thomas A. Christensen II <25492070+MillironX@users.noreply.github.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,8 +1,13 @@
 name: Testing
 # This workflow runs the pipeline with the minimal test dataset to check that it completes without any syntax errors
 on:
-  - release
-  - workflow_dispatch
+  push:
+    branches:
+      - develop
+  pull_request:
+  release:
+    types: [published]
+  workflow_dispatch:
 
 jobs:
   test:
