--- a/conf/parameters.config
+++ b/conf/parameters.config
@@ -71,10 +71,14 @@ params {
     phylogenetic_model            = 'GTR+G'
 
     // Boilerplate options
-    outdir           = './results'
-    tracedir         = "${params.outdir}/.trace"
-    publish_dir_mode = 'copy'
-    help             = false
+    outdir                = './results'
+    tracedir              = "${params.outdir}/.trace"
+    publish_dir_mode      = 'copy'
+    help                  = false
+    show_hidden_params    = false
+    schema_ignore_params  = false
+    custom_config_version = 'master'
+    custom_config_base    = "https://raw.githubusercontent.com/nf-core/configs/${params.custom_config_version}"
 
     // Max resource options
     // Defaults only, expecting to be overwritten
