--- a/conf/profiles.config
+++ b/conf/profiles.config
@@ -1,7 +1,24 @@
 // Configuration profiles to allow use of different container environments. Uses
 // similar nomenclature and code as nf-core's pipelines
 
+// Load nf-core custom profiles from different Institutions
+try {
+    includeConfig "${params.custom_config_base}/nfcore_custom.config"
+} catch (Exception e) {
+    System.err.println("WARNING: Could not load nf-core/config profiles: ${params.custom_config_base}/nfcore_custom.config")
+}
+
 profiles {
+    debug { process.beforeScript = 'echo $HOSTNAME' }
+    conda {
+        params.enable_conda    = true
+        docker.enabled         = false
+        singularity.enabled    = false
+        podman.enabled         = false
+        shifter.enabled        = false
+        charliecloud.enabled   = false
+        envWhitelist           = 'NCBI_API_KEY'
+    }
     docker {
         docker.enabled         = true
         docker.userEmulation   = true
@@ -22,14 +39,27 @@ profiles {
     }
     podman {
         podman.enabled         = true
-        podman.mountFlags      = 'z'
         docker.enabled         = false
         singularity.enabled    = false
         shifter.enabled        = false
         charliecloud.enabled   = false
         envWhitelist           = 'NCBI_API_KEY'
     }
-
-    // Debug
-    debug { process.beforeScript = 'echo $HOSTNAME; echo $SHELL; echo $PATH' }
+    shifter {
+        shifter.enabled        = true
+        docker.enabled         = false
+        singularity.enabled    = false
+        podman.enabled         = false
+        charliecloud.enabled   = false
+        envWhitelist           = 'NCBI_API_KEY'
+    }
+    charliecloud {
+        charliecloud.enabled   = true
+        docker.enabled         = false
+        singularity.enabled    = false
+        podman.enabled         = false
+        shifter.enabled        = false
+        envWhitelist           = 'NCBI_API_KEY'
+    }
+    test      { includeConfig 'conf/test.config' }
 }
