--- a/nextflow.config
+++ b/nextflow.config
@@ -13,7 +13,7 @@ manifest {
     homePage          = 'https://ksumngs.github.io/yavsap'
     description       = 'Intra-sample viral population analysis'
     mainScript        = 'main.nf'
-    nextflowVersion    = '>=20.10.0'
+    nextflowVersion    = '!>=20.10.0'
     version           = '0.5.0-alpha'
     recurseSubmodules = true
 }
