--- a/conf/profiles.config
+++ b/conf/profiles.config
@@ -61,5 +61,5 @@ profiles {
         shifter.enabled        = false
         envWhitelist           = 'NCBI_API_KEY'
     }
-    test      { includeConfig 'conf/test.config' }
+    test      { includeConfig 'test.config' }
 }
