--- a/conf/test.config
+++ b/conf/test.config
@@ -1,27 +1,19 @@
 profiles {
     test {
         params {
-            input           = 'TESTING'
-            sra             = true
-            genome          = 'MH258848.1'
-            keep_taxid      = '10239'
+            keep_taxid      = '0 1'
 
             trim_minlen     = 100
             trim_winsize    = 50
 
-            canu_corrected_error_rate = 0.2
-            canu_min_read_length      = 100
-            canu_min_overlap_length   = 50
-            canu_stop_on_low_coverage = 3
+            variant_quality      = 10
+            variant_depth        = 5
+            variant_position     = 0.01
+            variant_frequency    = 0.01
+            variant_significance = 0.1
 
-            variant_quality      = 12
-            variant_depth        = 10
-            variant_position     = 0.1
-            variant_frequency    = 0.05
-            variant_significance = 1e-5
-
-            haplotype_depth        = 50
-            haplotype_significance = 0.05
+            haplotype_depth        = 10
+            haplotype_significance = 0.1
 
             phylogenetic_bootstraps = 100
         }
@@ -29,7 +21,6 @@ profiles {
         process {
             errorStrategy = 'terminate'
         }
-
     }
 
     gh {
