--- a/conf/parameters.config
+++ b/conf/parameters.config
@@ -79,6 +79,7 @@ params {
     schema_ignore_params  = false
     custom_config_version = 'master'
     custom_config_base    = "https://raw.githubusercontent.com/nf-core/configs/${params.custom_config_version}"
+    enable_conda          = false
 
     // Max resource options
     // Defaults only, expecting to be overwritten
