Correct ci platform parameters for Nextflow edge testing
Signed-off-by: Thomas A. Christensen II <25492070+MillironX@users.noreply.github.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,12 +32,12 @@ jobs:
             nxf_edge: 1
             container_env: docker
             skipping: ''
-            read_type: ont
+            read_type: nanopore
           - nxf_ver: ''
             nxf_edge: 1
             container_env: docker
             skipping: ''
-            read_type: pe
+            read_type: illumina
     steps:
       - name: Check out pipeline code
         uses: actions/checkout@v2
