Add parameter to pick method for CliqueSNV
Signed-off-by: Thomas A. Christensen II <25492070+MillironX@users.noreply.github.com>

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -114,7 +114,13 @@ process {
 
     // CliqueSNV parameter propogation
     withName: 'CLIQUESNV_.*' {
-        ext.args = "-t ${params.haplotype_depth} -tf ${params.haplotype_frequency} -log -fdf extended"
+        ext.args = """\
+                    -t ${params.haplotype_depth} \\
+                    -tf ${params.haplotype_frequency} \\
+                    -cm ${params.cliquesnv_method} \\
+                    -fdf extended \\
+                    -log \\
+                    """
     }
 
     // CliqueSNV variant output
