--- a/conf/parameters.config
+++ b/conf/parameters.config
@@ -64,6 +64,7 @@ params {
     haplotype_overlap_min  = 0
     haplotype_overlap_max  = 100
     haplotype_iterations   = 1000
+    cliquesnv_method       = 'accurate'
 
     // Phylogenetics options
     phylogenetic_bootstraps       = 1000
