Add parameter to allow for changing MAFFT options
Signed-off-by: Thomas A. Christensen II <25492070+MillironX@users.noreply.github.com>

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -187,7 +187,7 @@ process {
 
     // MAFFT required parameter and output
     withName: 'MAFFT' {
-        ext.args = '--auto'
+        ext.args = "${params.mafft_method}"
         publishDir = [
                 path: { "${params.outdir}/multi_alignment" },
                 mode: params.publish_dir_mode
