--- a/conf/parameters.config
+++ b/conf/parameters.config
@@ -67,6 +67,7 @@ params {
     cliquesnv_method       = 'accurate'
 
     // Phylogenetics options
+    mafft_method                  = '--auto'
     phylogenetic_bootstraps       = 1000
     phylogenetic_bootstrap_cutoff = 0.03
     phylogenetic_model            = 'GTR+G'
