Update test profile with parameter options that do not fail
Signed-off-by: Thomas A. Christensen II <25492070+MillironX@users.noreply.github.com>

--- a/conf/test.config
+++ b/conf/test.config
@@ -15,7 +15,12 @@ profiles {
             haplotype_depth        = 10
             haplotype_significance = 0.1
 
-            phylogenetic_bootstraps = 100
+            cliquesnv_method = 'fast'
+            haplotype_method = 'raw'
+
+            mafft_method = '--retree 1 --maxiterate 0'
+
+            phylogenetic_bootstraps = 10
         }
 
         process {
@@ -27,7 +32,7 @@ profiles {
         params {
             max_cpus   = 2
             max_memory = 6.GB
-            max_time   = 20.m
+            max_time   = 6.h
         }
     }
 }
