Add default sc2 parameters into profile
Signed-off-by: Thomas A. Christensen II <25492070+MillironX@users.noreply.github.com>

--- a/conf/test.config
+++ b/conf/test.config
@@ -1,6 +1,9 @@
 profiles {
     test {
         params {
+            genome      = 'NC_045512.2'
+            genome_list = 'sc2'
+
             keep_taxid      = '0 1'
 
             trim_minlen     = 100
