Swap nf-core CAT_FASTQ module for ksumngs one
Signed-off-by: Thomas A. Christensen II <25492070+MillironX@users.noreply.github.com>

--- a/modules/ksumngs/nf-modules/cat/fastq/meta.yml
+++ b/modules/ksumngs/nf-modules/cat/fastq/meta.yml
@@ -19,6 +19,10 @@ input:
       type: list
       description: |
         List of input FastQ files to be concatenated.
+  - gzipped:
+    type: boolean
+    description: |
+      Whether the output should be gzipped or not
 output:
   - meta:
       type: map
@@ -37,3 +41,4 @@ output:
 authors:
   - "@joseespinosa"
   - "@drpatelh"
+  - "@MillironX"
