Switch test profiles to use remote samplesheet
Signed-off-by: Thomas A. Christensen II <25492070+MillironX@users.noreply.github.com>

--- a/conf/profiles.config
+++ b/conf/profiles.config
@@ -61,5 +61,15 @@ profiles {
         shifter.enabled        = false
         envWhitelist           = 'NCBI_API_KEY'
     }
-    test      { includeConfig 'test.config' }
+    gh {
+        params {
+            max_cpus   = 2
+            max_memory = 6.GB
+            max_time   = 6.h
+        }
+    }
+    test             { includeConfig 'test.config'             } // Illumina PE Deinterleaved
+    test_interleaved { includeConfig 'test_interleaved.config' } // Illumina PE Interleaved
+    test_se          { includeConfig 'test_se.config'          } // Illumina SE
+    test_nanopore    { includeConfig 'test_nanopore.config'    } // Nanopore
 }
