--- a/conf/test_interleaved.config
+++ b/conf/test_interleaved.config
@@ -1,8 +1,8 @@
 params {
-    input       = 'https://github.com/ksumngs/nf-test-datasets/raw/yavsap/samplesheet/illumina-pe-deinterleaved.tsv'
+    input       = 'https://github.com/ksumngs/nf-test-datasets/raw/yavsap/samplesheet/illumina-pe-interleaved.tsv'
     platform    = 'illumina'
     paired      = true
-    interleaved = false
+    interleaved = true
 
     includeConfig 'test_params_common.config'
 }
