--- a/conf/test_se.config
+++ b/conf/test_se.config
@@ -1,7 +1,7 @@
 params {
-    input       = 'https://github.com/ksumngs/nf-test-datasets/raw/yavsap/samplesheet/illumina-pe-deinterleaved.tsv'
+    input       = 'https://github.com/ksumngs/nf-test-datasets/raw/yavsap/samplesheet/illumina-se.tsv'
     platform    = 'illumina'
-    paired      = true
+    paired      = false
     interleaved = false
 
     includeConfig 'test_params_common.config'
