Switch consensus to majority voting
Signed-off-by: Thomas A. Christensen II <25492070+MillironX@users.noreply.github.com>

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -96,7 +96,7 @@ process {
 
     // Consensus sequences: match variant calling params and output
     withName: 'IVAR_CONSENSUS' {
-        ext.args  = "-q ${params.variant_quality} -t ${params.variant_frequency} -m ${params.variant_depth}"
+        ext.args  = "-q ${params.variant_quality} -m ${params.variant_depth}"
         ext.args2 = "-aa -A -d 0 -Q 0"
         publishDir = [
             path: { "${params.outdir}/consensus" },
