Remove platform-dependent parameters
Signed-off-by: Thomas A. Christensen II <25492070+MillironX@users.noreply.github.com>

--- a/conf/parameters.config
+++ b/conf/parameters.config
@@ -19,7 +19,7 @@ params {
     keep_taxid     = '0 10239' // 0 = Unclassified, 10239 = Viral
 
     // Read trimming options (shared)
-    trim_minlen      = (params.platform == 'illumina') ? 100 : 300
+    trim_minlen      = 100
     trim_headcrop    = 0
 
     // Illumina trimming options (Trimmomatic)
@@ -50,8 +50,8 @@ params {
     spades_mode = 'rnaviral'
 
     // Variant calling options
-    variant_quality      = (params.platform == 'illumina') ? 30 : 12
-    variant_depth        = (params.platform == 'illumina') ? 10 : 15
+    variant_quality      = 12
+    variant_depth        = 10
     variant_position     = 0.1
     variant_frequency    = 0.05
     variant_significance = 1e-3
