--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,24 +42,11 @@ jobs:
           wget -qO- get.nextflow.io | bash
           sudo mv nextflow /usr/local/bin
 
-      - name: Cache Kraken2 database
-        id: kraken2db-cache
-        uses: actions/cache@v2
-        with:
-          path: ~/kraken2-db
-          key: kraken2db-viral_20210517
-
-      - name: Download Kraken2 database
-        if: ${{ steps.kraken2db-cache.outputs.cache-hit != 'true' }}
-        run: |
-          mkdir ~/kraken2-db
-          wget -qO- https://genome-idx.s3.amazonaws.com/kraken/k2_viral_20210517.tar.gz | tar xzv -C ~/kraken2-db
-
       - name: Run pipeline with test data
         env:
           NCBI_API_KEY: ${{ secrets.NCBI_API_KEY }}
         run: |
-          nextflow run ${GITHUB_WORKSPACE} -profile test,gh,docker --kraken2_db ~/kraken2-db
+          nextflow run ${GITHUB_WORKSPACE} -profile test,gh,docker
 
   parameters:
     name: Test workflow parameters
@@ -69,7 +56,8 @@ jobs:
       matrix:
         parameters:
           - "--keep_taxid classified"
-          # - '--keep_taxid unclassified' # This will fail with current Kraken database
+          - "--kraken2_db https://genome-idx.s3.amazonaws.com/kraken/16S_Silva132_20200326.tgz --keep_taxid unclassified"
+          - "--kraken2_db ~/kraken2-db"
           - "--skip_qc"
           - "--skip_trimming"
           - "--skip_filtering"
@@ -84,15 +72,8 @@ jobs:
           wget -qO- get.nextflow.io | bash
           sudo mv nextflow /usr/local/bin
 
-      - name: Cache Kraken2 database
-        id: kraken2db-cache
-        uses: actions/cache@v2
-        with:
-          path: ~/kraken2-db
-          key: kraken2db-viral_20210517
-
       - name: Download Kraken2 database
-        if: ${{ steps.kraken2db-cache.outputs.cache-hit != 'true' }}
+        if: ${{ matrix.parameters == '--kraken2_db ~/kraken2-db' }}
         run: |
           mkdir ~/kraken2-db
           wget -qO- https://genome-idx.s3.amazonaws.com/kraken/k2_viral_20210517.tar.gz | tar xzv -C ~/kraken2-db
@@ -101,7 +82,7 @@ jobs:
         env:
           NCBI_API_KEY: ${{ secrets.NCBI_API_KEY }}
         run: |
-          nextflow run ${GITHUB_WORKSPACE} -profile test,gh,docker ${{ matrix.parameters }} --kraken2_db ~/kraken2-db
+          nextflow run ${GITHUB_WORKSPACE} -profile test,gh,docker ${{ matrix.parameters }}
 
   test_interleaved:
     name: Test Interleaved Reads Workflow
@@ -117,25 +98,11 @@ jobs:
           wget -qO- get.nextflow.io | bash
           sudo mv nextflow /usr/local/bin
 
-      - name: Cache Kraken2 database
-        id: kraken2db-cache
-        uses: actions/cache@v2
-        with:
-          path: ~/kraken2-db
-          key: kraken2db-viral_20210517
-
-      - name: Download Kraken2 database
-        if: ${{ steps.kraken2db-cache.outputs.cache-hit != 'true' }}
-        run: |
-          mkdir ~/kraken2-db
-          wget -qO- https://genome-idx.s3.amazonaws.com/kraken/k2_viral_20210517.tar.gz | tar xzv -C ~/kraken2-db
-
       - name: Run pipeline with test data
         env:
           NCBI_API_KEY: ${{ secrets.NCBI_API_KEY }}
         run: |
-          nextflow run ${GITHUB_WORKSPACE} -profile test_interleaved,gh,docker --kraken2_db ~/kraken2-db
-
+          nextflow run ${GITHUB_WORKSPACE} -profile test_interleaved,gh,docker
   test_nanopore:
     name: Run workflow tests
     # Only run on push if this is the develop branch (merged PRs)
@@ -150,21 +117,8 @@ jobs:
           wget -qO- get.nextflow.io | bash
           sudo mv nextflow /usr/local/bin
 
-      - name: Cache Kraken2 database
-        id: kraken2db-cache
-        uses: actions/cache@v2
-        with:
-          path: ~/kraken2-db
-          key: kraken2db-viral_20210517
-
-      - name: Download Kraken2 database
-        if: ${{ steps.kraken2db-cache.outputs.cache-hit != 'true' }}
-        run: |
-          mkdir ~/kraken2-db
-          wget -qO- https://genome-idx.s3.amazonaws.com/kraken/k2_viral_20210517.tar.gz | tar xzv -C ~/kraken2-db
-
       - name: Run pipeline with test data
         env:
           NCBI_API_KEY: ${{ secrets.NCBI_API_KEY }}
         run: |
-          nextflow run ${GITHUB_WORKSPACE} -profile test,gh,docker --kraken2_db ~/kraken2-db
+          nextflow run ${GITHUB_WORKSPACE} -profile test,gh,docker
