--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -62,6 +62,8 @@ jobs:
     steps:
       - uses: actions/checkout@v1
       - uses: actions/setup-node@v2
+        with:
+          node-version: '16'
       - name: Install yaml-lint
         run: npm install -g yaml-lint
       - name: Run yaml-lint
