--- a/.github/workflows/branch.yml
+++ b/.github/workflows/branch.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Check PRs
         if: github.repository == 'ksumngs/yavsap'
         run: |
-          { [[ ${{github.event.pull_request.head.repo.full_name }} == ksumngs/yavsap ]] && [[ $GITHUB_HEAD_REF = "develop" ]]; } || [[ $GITHUB_HEAD_REF == "patch" ]]
+          { [[ ${{github.event.pull_request.head.repo.full_name }} == ksumngs/yavsap ]] && [[ $GITHUB_HEAD_REF = "develop" ]]; } || [[ $GITHUB_HEAD_REF == "patch" ]] || [[ $GITHUB_HEAD_REF =~ "hotfix/" ]]
 
       # If the above check failed, post a comment on the PR explaining the failure
       # NOTE - this doesn't currently work if the PR is coming from a fork, due to limitations in GitHub actions secrets
