Add dynamic memory allocation for Kraken2
Signed-off-by: Thomas A. Christensen II <25492070+MillironX@users.noreply.github.com>

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -1,4 +1,21 @@
+import static java.lang.Math.sqrt
+import static java.lang.Math.round
+
 def platform = params.platform
+
+// Kraken memory allocation
+def kraken2_db = new File("${params.kraken2_db}")
+if (kraken2_db.isDirectory()) {
+    process {
+        withName: 'KRAKEN2' {
+            memory = {
+                def krakenDbSize = kraken2_db.directorySize()
+                def allocSize = round(sqrt(krakenDbSize) + krakenDbSize)
+                return "${allocSize} B"
+            }
+        }
+    }
+}
 
 process {
     // Deinterleaving parameter: take every other read
