Fix new nf-core linting errors
@ewels has been working hard to release three new nf-core tools versions in
as many days, and so maintaining the standard is a moving target. Keep up
with his latest shennanigans so we can merge this hotfix without GitHub
yelling at us.

Signed-off-by: Thomas A. Christensen II <25492070+MillironX@users.noreply.github.com>

--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -19,7 +19,7 @@ jobs:
         run: npm install -g editorconfig-checker
 
       - name: Run ECLint check
-        run: editorconfig-checker -exclude README.md $(git ls-files | grep -v test)
+        run: editorconfig-checker -exclude '.*.md' $(git ls-files | grep -v test)
 
   Prettier:
     runs-on: ubuntu-latest
