--- a/conf/trace.config
+++ b/conf/trace.config
@@ -7,7 +7,8 @@ timeline {
 }
 report {
     enabled = true
-    file    = "${params.tracedir}/execution_report_${trace_timestamp}.html"
+    // file = "${params.tracedir}/execution_report_${trace_timestamp}.html"
+    file = "${params.outdir}/report/nextflow_report.html"
 }
 trace {
     enabled = true
