Update the module config so long reads are aligned in presentation mode
Signed-off-by: Thomas A. Christensen II <25492070+MillironX@users.noreply.github.com>

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -104,14 +104,19 @@ process {
     }
 
     // General alignment settings: match sequencing platform, and output SAM format
-    withName: 'MINIMAP2_ALIGN' {
+    withName: '.*ALIGNMENT:MINIMAP2_ALIGN' {
         ext.args =
             """\
-            ${(platform == 'nanopore') ? '-x map-ont' : (platform == 'illumina') ? '-ax sr' : ''} \\
+            ${(platform == 'nanopore') ? '-x map-ont' : (platform == 'illumina') ? '-x sr' : ''} \\
             -a \\
             --MD \\
             --eqx \
             """
+    }
+
+    // Visualizer alignment settings: output SAM
+    withName: 'PRESENTATION:MINIMAP2_ALIGN' {
+        ext.args = '-a'
     }
 
     // First alignment output
