Add Krona processes into workflows
Signed-off-by: Thomas A. Christensen II <25492070+MillironX@users.noreply.github.com>

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -103,6 +103,16 @@ process {
         ext.args = '--include-children'
     }
 
+    // Output Krona chart
+    withName: 'KRONA_IMPORTTEXT' {
+        ext.args = '-n root -u https://marbl.github.io/Krona'
+        publishDir = [
+            path: { "${params.outdir}/report" },
+            mode: params.publish_dir_mode,
+            saveAs: { filename -> filename.endsWith('html') ? 'krona.html' : null }
+        ]
+    }
+
     // General alignment settings: match sequencing platform, and output SAM format
     withName: '.*ALIGNMENT:MINIMAP2_ALIGN' {
         ext.args =
