--- a/.editorconfig
+++ b/.editorconfig
@@ -9,7 +9,7 @@ trim_trailing_whitespace = true
 indent_size = 4
 indent_style = space
 
-[*.{md,yml,yaml,html,css,scss,js,pug,rst}]
+[*.{md,yml,yaml,html,css,scss,js,pug,rst,prettierrc}]
 indent_size = 2
 
 # These files are edited and tested upstream in nf-core/modules
