--- a/conf/modules.config
+++ b/conf/modules.config
@@ -17,6 +17,18 @@ if (kraken2_db.isDirectory()) {
     }
 }
 
+if (platform == 'illumina' && !params.skip_haplotype) {
+    process {
+        withName: 'HAPLOTYPING:JSON2YAML' {
+        publishDir = [
+                path: { "${params.outdir}/haplotypes" },
+                mode: params.publish_dir_mode,
+                saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+            ]
+        }
+    }
+}
+
 process {
     // Deinterleaving parameter: take every other read
     withName: 'SEQKIT_SPLIT2' {
@@ -26,16 +38,34 @@ process {
     // Reference genome download output
     withName: 'GENOME_DOWNLOAD:EDIRECT_EFETCH' {
         publishDir = [
-            path: { "${params.outdir}/reference" },
-            mode: params.publish_dir_mode
+            [
+                path: { "${params.outdir}/reference" },
+                mode: params.publish_dir_mode,
+                saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+            ],
+            [
+                path: { "${params.outdir}/report" },
+                mode: params.publish_dir_mode,
+                saveAs: { filename -> filename.equals('versions.yml') ? null : 'reference.fasta' }
+            ]
         ]
     }
+
     withName: 'GENOME_DOWNLOAD:SAMTOOLS_FAIDX' {
         publishDir = [
-            path: { "${params.outdir}/reference" },
-            mode: params.publish_dir_mode
+            [
+                path: { "${params.outdir}/reference" },
+                mode: params.publish_dir_mode,
+                saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+            ],
+            [
+                path: { "${params.outdir}/report" },
+                mode: params.publish_dir_mode,
+                saveAs: { filename -> filename.equals('versions.yml') ? null : 'reference.fasta.fai' }
+            ]
         ]
     }
+
 
     // Trimming: argument propogation
     withName: 'TRIMMOMATIC' {
@@ -63,7 +93,8 @@ process {
     withName: 'KRAKEN2' {
         publishDir = [
             path: { "${params.outdir}/classification" },
-            mode: params.publish_dir_mode
+            mode: params.publish_dir_mode,
+            saveAs: { filename -> filename.endsWith('kreport') ? filename : null }
         ]
     }
 
@@ -72,42 +103,54 @@ process {
         ext.args = '--include-children'
     }
 
+    // Output Krona chart
+    withName: 'KRONA_IMPORTTEXT' {
+        ext.args = '-n root -u https://marbl.github.io/Krona'
+        publishDir = [
+            path: { "${params.outdir}/report" },
+            mode: params.publish_dir_mode,
+            saveAs: { filename -> filename.endsWith('html') ? 'krona.html' : null }
+        ]
+    }
+
     // General alignment settings: match sequencing platform, and output SAM format
-    withName: 'MINIMAP2_ALIGN' {
+    withName: '.*ALIGNMENT:MINIMAP2_ALIGN' {
         ext.args =
             """\
-            ${(platform == 'nanopore') ? '-x map-ont' : (platform == 'illumina') ? '-ax sr' : ''} \\
+            ${(platform == 'nanopore') ? '-x map-ont' : (platform == 'illumina') ? '-x sr' : ''} \\
             -a \\
             --MD \\
             --eqx \
             """
     }
 
-    // First alignment output
-    withName: 'ALIGNMENT:SAMTOOLS_SORT' {
-        publishDir = [
-            path: { "${params.outdir}/alignment" },
-            mode: params.publish_dir_mode
-        ]
+    // Visualizer alignment settings: output SAM
+    withName: 'PRESENTATION:MINIMAP2_ALIGN' {
+        ext.args = '-a'
     }
-    withName: 'ALIGNMENT:SAMTOOLS_INDEX' {
+
+    // First alignment output
+    withName: 'ALIGNMENT:SAMTOOLS_.*' {
         publishDir = [
-            path: { "${params.outdir}/alignment" },
-            mode: params.publish_dir_mode
+            [
+                path: { "${params.outdir}/alignment" },
+                mode: params.publish_dir_mode,
+                saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+            ],
+            [
+                path: { "${params.outdir}/report" },
+                mode: params.publish_dir_mode,
+                saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+            ]
         ]
     }
 
     // Realignment output
-    withName: 'CLOSEST_REFERENCE:CUSTOM_ALIGNMENT:SAMTOOLS_SORT' {
+    withName: 'CLOSEST_REFERENCE:CUSTOM_ALIGNMENT:SAMTOOLS_.*' {
         publishDir = [
             path: { "${params.outdir}/realignment" },
-            mode: params.publish_dir_mode
-        ]
-    }
-    withName: 'CLOSEST_REFERENCE:CUSTOM_ALIGNMENT:SAMTOOLS_INDEX' {
-        publishDir = [
-            path: { "${params.outdir}/realignment" },
-            mode: params.publish_dir_mode
+            mode: params.publish_dir_mode,
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
     }
 
@@ -117,7 +160,8 @@ process {
         ext.args2 = "-aa -A -d 0 -Q 0"
         publishDir = [
             path: { "${params.outdir}/consensus" },
-            mode: params.publish_dir_mode
+            mode: params.publish_dir_mode,
+            saveAs: { filename -> filename.endsWith('fa') ? "${filename}sta" : null }
         ]
     }
 
@@ -143,23 +187,19 @@ process {
     // CliqueSNV variant output
     withName: 'CLIQUESNV_ILLUMINAVC' {
         publishDir = [
-                path: { "${params.outdir}/variants" },
-                mode: params.publish_dir_mode
-            ]
+            path: { "${params.outdir}/variants" },
+            mode: params.publish_dir_mode,
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+        ]
     }
 
     // CliqueSNV haplotype output
     withName: 'CLIQUESNV_ILLUMINA' {
         publishDir = [
-                path: { "${params.outdir}/haplotypes" },
-                mode: params.publish_dir_mode
-            ]
-    }
-    withName: 'HAPLOTYPING:JSON2YAML' {
-        publishDir = [
-                path: { "${params.outdir}/haplotypes" },
-                mode: params.publish_dir_mode
-            ]
+            path: { "${params.outdir}/haplotypes" },
+            mode: params.publish_dir_mode,
+            saveAs: { filename -> filename.endsWith('fasta') ? filename : null }
+        ]
     }
 
     // HapLink.jl variant parameter propgation and output
@@ -172,9 +212,10 @@ process {
             --depth ${params.variant_depth} \\
             """
         publishDir = [
-                path: { "${params.outdir}/variants" },
-                mode: params.publish_dir_mode
-            ]
+            path: { "${params.outdir}/variants" },
+            mode: params.publish_dir_mode,
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+        ]
     }
 
     // HapLink.jl haplotype parameter propogation and output
@@ -189,26 +230,29 @@ process {
             --seed ${params.seed} \\
         """
         publishDir = [
-                path: { "${params.outdir}/haplotypes" },
-                mode: params.publish_dir_mode
-            ]
+            path: { "${params.outdir}/haplotypes" },
+            mode: params.publish_dir_mode,
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+        ]
     }
 
     // HapLink.jl haplotype sequence output
     withName: 'HAPLINK_SEQUENCES' {
         publishDir = [
-                path: { "${params.outdir}/haplotypes" },
-                mode: params.publish_dir_mode
-            ]
+            path: { "${params.outdir}/haplotypes" },
+            mode: params.publish_dir_mode,
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+        ]
     }
 
     // MAFFT required parameter and output
     withName: 'MAFFT' {
         ext.args = "${params.mafft_method}"
         publishDir = [
-                path: { "${params.outdir}/multi_alignment" },
-                mode: params.publish_dir_mode
-            ]
+            path: { "${params.outdir}/phylogenetics" },
+            mode: params.publish_dir_mode,
+            saveAs: { filename -> filename.equals('versions.yml') ? null : 'alignment.fas' }
+        ]
     }
 
     // RAxML-NG parameter propgation and output
@@ -224,16 +268,27 @@ process {
     withName: 'RAXMLNG_SUPPORT' {
         ext.args = "--outgroup ROOT --prefix yavsap"
         publishDir = [
-                path: { "${params.outdir}/phylogenetics" },
-                mode: params.publish_dir_mode
-            ]
+            path: { "${params.outdir}/phylogenetics" },
+            mode: params.publish_dir_mode,
+            saveAs: { filename -> filename.equals('versions.yml') ? null : 'tree.nwk' }
+        ]
     }
 
     // MultiQC output
     withName: 'MULTIQC' {
         publishDir = [
-            path: { "${params.outdir}" },
-            mode: params.publish_dir_mode
+            path: { "${params.outdir}/report" },
+            mode: params.publish_dir_mode,
+            saveAs: { filename -> filename.equals('multiqc_report.html') ? filename : null }
+        ]
+    }
+
+    // YAVSAP report
+    withName: 'SEQUENCETABLE' {
+        publishDir = [
+            path: { "${params.outdir}/report" },
+            mode: params.publish_dir_mode,
+            saveAs: { filename -> filename.equals('versions.yml') ? null : 'index.html' }
         ]
     }
 }
