Loosen variant calling criteria for Nanopore test suite
Signed-off-by: Thomas A. Christensen II <25492070+MillironX@users.noreply.github.com>

--- a/conf/test_nanopore.config
+++ b/conf/test_nanopore.config
@@ -4,6 +4,10 @@ params {
     paired      = false
     interleaved = false
 
+    variant_depth = 7
+    variant_frequency = 0.001
+    variant_significance = 0.25
+
     includeConfig 'test_params_common.config'
 }
 
