Add ability to pick cow breed
Signed-off-by: Thomas A. Christensen II <25492070+MillironX@users.noreply.github.com>

--- a/nextflow.config
+++ b/nextflow.config
@@ -88,6 +88,7 @@ params {
     email_on_fail = null
     plaintext_email = false
     monochrome_logs = false
+    breed = 'plain'
     help = false
     validate_params = true
     show_hidden_params = false
